# outsera_challenge

./: .gitignore  README.md  alembic.ini  makefile  movielist.csv  pyproject.toml
alembic/: env.py
alembic/versions/: 7db153f5bd27_create_table_movie.py  9c8e40691884_create_table_movie.py
src/outsera_challenge/: csv.py  main.py  utils.py
src/outsera_challenge/db/: base_repository.py  db.py  models.py
src/outsera_challenge/models/: movie.py
src/outsera_challenge/repositories/: movie_repository.py
src/outsera_challenge/services/: movie_service.py
tests/: conftest.py
tests/integration/: test_movie_api.py
